--- a/config/locales/fra/help/events-index.txt
+++ b/config/locales/fra/help/events-index.txt
@@ -3,12 +3,12 @@
 ===== Qu'est ce qu'un évènement ? =====
 Ils permettent de situer dans le temps et l'espace les contacts établis avec les clients/fournisseurs.
 
-Certains évènements peuvent s'enregistrer automatiquement en fonction du [[>event_natures/index|type d'évènement]]. Cela permet de faire un suivi complet dans la liste des évènements de chaque client.
+Certains évènements peuvent s'enregistrer automatiquement en fonction du [[>backend/event_natures|type d'évènement]]. Cela permet de faire un suivi complet dans la liste des évènements de chaque client.
 
 ===== Gestion des évènements =====
 Il est possible de créer {{theme:icons/new.png|créer}}, modifier {{theme:icons/edit.png|modifier}} ou même supprimer {{theme:icons/destroy.png|supprimer}}.
 
 Les évènements ne sont jamais //verrouillés// et peuvent être modifiés et/ou supprimés à tout moment.
 
->>> Si vous enregistrez un rendez-vous à venir, il vous sera affiché sur la [[>dashboards/relationship|page d'accueil du module]].
+>>> Si vous enregistrez un rendez-vous à venir, il vous sera affiché sur la [[>backend/dashboards#relationship|page d'accueil du module]].
 
