--- a/config/locales/fra/help/products-index.txt
+++ b/config/locales/fra/help/products-index.txt
@@ -1,13 +1,13 @@
-====== Animaux ======
+====== Produits ======
 
-===== Liste des animaux =====
+===== Liste des produits =====
 
-Ici, vous pouvez [[>products/new|créer]] et modifier des animaux.
+Ici, vous pouvez [[>backend/products#new|créer]] et modifier des produits.
 
-!!! Lors d'une naissance , il faut [[>products/new|créer]] un nouvel animal
+!!! Lors d'une naissance , il faut [[>backend/products#new|créer]] un nouvel animal
 
 !!! Lors d'une sortie ( vente / décès /  ) , il faut sortir l'animal en question et non pas le supprimer
 
->>> Editions =  [[>products|Carnet de naissance]]
+>>> Editions =  [[>backend/products|Carnet de naissance]]
 
 
