--- a/README.rdoc
+++ b/README.rdoc
@@ -29,11 +29,11 @@ We encourage you to contribute to Ekylibre.
 * Make sure to add tests for it. This is important so I don't break it in a future version unintentionally.
 * Please try not to mess with the Rakefile, version, or history. If you want to have your own version, or is otherwise necessary, that is fine, but please isolate to its own commit so I can cherry-pick around it.
 
-== Build Status {<img src="https://api.travis-ci.org/ekylibre/ekylibre.png?branch=master"/>}[https://travis-ci.org/ekylibre/ekylibre]
+== Code status
 
-== Dependency Status {<img src="https://gemnasium.com/ekylibre/ekylibre.png"/>}[https://gemnasium.com/ekylibre/ekylibre]
-
-== Code Climate {<img src="https://codeclimate.com/badge.png"/>}[https://codeclimate.com/github/ekylibre/ekylibre]
+* {<img src="https://api.travis-ci.org/ekylibre/ekylibre.png?branch=master"/>}[https://travis-ci.org/ekylibre/ekylibre]
+* {<img src="https://gemnasium.com/ekylibre/ekylibre.png"/>}[https://gemnasium.com/ekylibre/ekylibre]
+* {<img src="https://codeclimate.com/github/ekylibre/ekylibre.png" />}[https://codeclimate.com/github/ekylibre/ekylibre]
 
 == License
 
