Fixes 50 bugs due to schema changes

--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -1929,7 +1929,7 @@ arb:
         bank_account: "حساب مصرفي" #?
         cash_box: "صندوق النقدي" #?
     cash_transfer:
-      # bookkeep: "[%{resource} %{number}] De %{emitter} à %{receiver} %{comment}"
+      # bookkeep: "[%{resource} %{number}] De %{emitter} à %{receiver} %{description}"
     company:
       cant_find_document_template: "لا يمكن العثور على نموذج مطابق للوثيقة"
       default:
