--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -1015,17 +1015,17 @@ spa:
     # stock_move: "Mouvement de stock"
     # stock_moves: "Mouvements de stock"
     # stock_transfers: "Transferts ou pertes de stock"
-    # stockable: "Gérer les stocks"
     # stockable_products: "Produits stockables"
     # stocks: "Stocks de produit"
     # stopped_at: "Arrêté à"
     # stopped_on: "Arrêté le"
+    # storable: "Gérer les stocks"
     # story: "Historique"
     # string_value: "Valeur textuelle"
     # subdir: "Sous-répertoire"
     subdivision: "Y"
     # subject: "Objet"
-    # subscription_nature: "Type"
+    # subscription_nature: "Type d'abonnement"
     # subscription_natures: "Types d’abonnement"
     # subscription_period: "Période"
     # subscription_quantity: "Quantité"
@@ -1098,7 +1098,7 @@ spa:
     # uses: "Matériels utilisés"
     # value: "Valeur"
     # value_format: "Format de la valeur monétaire"
-    # variety: "Variety"
+    # variety: "Variété"
     # vat_number: "Numéro de TVA intra-communautaire"
     # vat_submissive: "Soumis à la TVA"
     # virtual: "Virtuel"
@@ -1422,10 +1422,9 @@ spa:
         # double: "EX%{first_year}/%{second_year}"
         # single: "EX%{first_year}"
     incoming_payment:
-      # bookkeep: "[%{resource} %{number}] %{mode} %{check_number} de %{payer} (%{expenses})"
-      # label: "%{number}. %{amount} (%{usable_amount} restants) du %{date} en %{mode} de %{payer}"
-    incoming_payment_use:
-      # bookkeep: "[%{resource}] %{mode} (%{payment_number}) reçu de %{attorney} pour %{client} (%{expense_number})"
+      # bookkeep: "[%{resource} %{number}] %{mode} %{check_number} de %{payer}"
+      # label: "%{number}. %{amount} du %{date} en %{mode} de %{payer}"
+    incoming_payment_use: #?
     inventory_item:
       # inventory: "Inventaire "
     inventory_line:
@@ -1479,8 +1478,8 @@ spa:
     outgoing_delivery_item:
       # sale: "Vente %{number}"
     outgoing_payment:
-      # bookkeep: "[%{resource} %{number}] %{mode} %{check_number} pour %{payee} (%{expenses})"
-      # label: "%{number}. %{amount} (%{usable_amount} restants) du %{date} en %{mode} pour %{payee}"
+      # bookkeep: "[%{resource} %{number}] %{mode} %{check_number} pour %{payee}"
+      # label: "%{number}. %{amount} du %{date} en %{mode} pour %{payee}"
     product:
       informations:
         # with_components: "%{product} (%{unit}) (produit transformé)"
