add translation for product_nautre_prices

--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -301,12 +301,12 @@ fra:
       new: "Ajout d’une nouvelle catégorie de produits"
       show: "Détail de la catégorie\_: %{name}"
     backend/product_nature_prices:
-      # edit: "Edit backend/product nature price"
-      # export: "Export backend/product nature price"
-      # find: "Find backend/product nature price"
-      # import: "Import backend/product nature price"
-      # index: "Index backend/product nature price"
-      # new: "New backend/product nature price"
+      edit: "Modifier un prix de références"
+      export: "Exporter une liste de prix de références"
+      find: "Trouver un prix de référence"
+      import: "Importer une liste de prix de références"
+      index: "Prix de références"
+      new: "Ajout d’un nouveau prix de référence (type de produit)"
     backend/product_natures:
       edit: "Modifier le type de produit\_: %{name}"
       index: "Type de produit"
@@ -547,8 +547,8 @@ fra:
     # backend/product_localizations: "Backend/product localizations"
     # backend/product_memberships: "Backend/product memberships"
     backend/product_moves: "Mouvements de stock"
-    backend/product_nature_categories: "Catégories de produits"
-    # backend/product_nature_prices: "Backend/product nature prices"
+    backend/product_nature_categories: "Catégories de type de produits"
+    backend/product_nature_prices: "Prix par type de produits"
     # backend/product_natures: "Backend/product natures"
     # backend/product_process_phases: "Backend/product process phases"
     # backend/product_processes: "Backend/product processes"
