--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -430,7 +430,7 @@ jpn:
     # balances: "Balances de compte"
     # bank_account_number: "Bank account number"
     # bank_agency_code: "Code guichet"
-    # bank_check_number: "Bank check number"
+    # bank_check_number: "N°Chèque"
     # bank_code: "Code banque"
     # bank_identifier_code: "BIC"
     # bank_journals: "Journaux de banque"
@@ -461,7 +461,6 @@ jpn:
     # changes_reflected: "Refléter les changements"
     # charges_account: "Compte de charge"
     # charges_accounts: "Comptes de charge"
-    # check_number: "N°Chèque"
     # check_state: "Vérifier l’état"
     # chidren: "Chidren"
     # child_kinships: "Relation enfant"
