--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -431,7 +431,7 @@ fra:
     bank_account_number: "Bank account number"
     # bank_agency_address: "Bank agency address"
     bank_agency_code: "Code guichet"
-    bank_check_number: "Bank check number"
+    bank_check_number: "N°Chèque"
     bank_code: "Code banque"
     bank_identifier_code: "BIC"
     bank_journals: "Journaux de banque" #?
@@ -463,7 +463,6 @@ fra:
     # charge_account: "Charge account"
     charges_account: "Compte de charge"
     charges_accounts: "Comptes de charge" #?
-    bank_check_number: "N°Chèque" #?
     check_state: "Vérifier l’état"
     chidren: "Chidren" #?
     child_kinships: "Relation enfant" #?
