--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -499,7 +499,8 @@ jpn:
     # backend/preferences: "Préférences"
     # backend/product_groups: "Lot de produits"
     # backend/product_moves: "Mouvements de stock"
-    # backend/product_nature_categories: "Catégories de produits"
+    # backend/product_nature_categories: "Catégories de type de produits"
+    # backend/product_nature_prices: "Prix par type de produits"
     # backend/product_transfers: "Transferts et pertes de stocks"
     # backend/product_varieties: "Races"
     # backend/production_chain_conveyors: "Convoyeurs de chaînes de production"
