Adds SVG maps for land parcels and age for animals

--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -376,6 +376,7 @@ fra:
       # vegetal: "Vegetal"
       warehouse: "Lieu de stockage"
   attributes:
+    age: "Âge"
     account: "Compte comptable"
     account_balances: "Balances de compte"
     accountable: "Comptabilisable"
