--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -602,6 +602,8 @@ fra:
         one: "%{count} erreur a empêché l’enregistrement (%{model})"
         other: "%{count} erreurs ont empêché l’enregistrement (%{model})"
   labels:
+    list: "Liste"
+    map: "Carte"
     account_accruals: "Comptes de régularisation"
     account_attorney_to_create: "-- Créer automatiquement un compte mandataire --"
     account_claims_assets: "Créances"
@@ -1519,6 +1521,15 @@ fra:
     x_waiting_outgoing_deliveries:
       one: "%{count} livraison sortante en attente"
       other: "%{count} livraisons sortantes en attente"
+    x_years:
+      one: "%{count} an"
+      other: "%{count} ans" 
+    x_months:
+      one: "%{count} mois"
+      other: "%{count} mois" 
+    x_days:
+      one: "%{count} jour"
+      other: "%{count} jours" 
     y: "Oui"
     yearly: "Annuelle"
   notifications:
