Enhances land parcels styles adding hover style and background colors

--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -18,7 +18,7 @@ fra:
       index: "Productions animales"
       new: "Nouvel animal"
       # picture: "Picture backend/animal"
-      show: "Animal\_: %{name}"
+      show: "%{nature_name}\_: %{name}"
     backend/areas:
       edit: "Modifier la zone postale\_: %{name}"
       index: "Zones postales"
